<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceVariant"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurfaceVariant"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/anime_character_title"
            app:titleTextAppearance="@style/Theme.AnimeGarden.ToolbarTitle" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_upload_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/ui_layout_margin"
            android:paddingVertical="@dimen/ui_size_6"
            android:text="@string/anime_character_subtitle"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textStyle="bold"
            app:fontFamily="@font/font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_upload_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/ui_layout_margin"
            android:paddingVertical="@dimen/ui_size_6"
            android:text="@string/anime_character_desc"
            android:textAppearance="?attr/textAppearanceBodySmall"
            app:layout_constraintTop_toBottomOf="@+id/tv_upload_title" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/ui_layout_margin"
            android:layout_marginTop="@dimen/ui_size_24"
            android:background="@drawable/shape_upload_image"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/ui_size_24"
            app:layout_constraintTop_toBottomOf="@+id/tv_upload_desc">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/ui_size_40"
                android:layout_height="@dimen/ui_size_40"
                app:srcCompat="@drawable/ic_image" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/ui_size_6"
                android:text="@string/anime_character_upload_image"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="?attr/colorOnSurface"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_character_upload_limit" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/ui_size_6"
                android:text="@string/anime_character_upload_btn"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>